@@ -609,6 +609,11 @@ C<host/intf, host/intf, ...>. Example:
 Defines the child subtree name within host-level subtree where system CPU
 and memory statistics are located. Default: C<System_Performance>.
 
+=item * C<RFC2670_DOCS_IF::upstreams-only>
+
+If set to C<yes>, only the DOCSIS upstream statistics are enabled, and
+downstream and MAC layer stats are skipped.
+
 =back
 
 =head3 Vendor parameters
