@@ -395,11 +395,6 @@ sub buildConfig
 
     uniqueEntries( $devdetails, $data->{'nameref'}{'ifNick'} );
     uniqueEntries( $devdetails, $data->{'nameref'}{'ifSubtreeName'} );
-
-    if( $devdetails->param('RFC2863_IF_MIB::noout') eq 'yes' )
-    {
-        return;
-    }
     
     # Build interface parameters
 
@@ -439,6 +434,11 @@ sub buildConfig
     }
 
     if( $nInterfaces == 0 )
+    {
+        return;
+    }
+
+    if( $devdetails->param('RFC2863_IF_MIB::noout') eq 'yes' )
     {
         return;
     }
